(minor fix) formatted the text to be of the same font,size,ecc... and fixxed some spacing issues

--- a/style.css
+++ b/style.css
@@ -576,6 +576,7 @@ p {
     margin-left: 2vw;
     position: absolute;
     top: 4vh;
+    margin-top: 5vh;
 }
 
 #separatore_2{
@@ -589,7 +590,7 @@ p {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 30%;
     margin: 2vh;
-    margin-top: 7vh;
+    margin-top: 17vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -601,23 +602,26 @@ p {
     width: 100%;
     height: auto;
     border-bottom: 1px solid #ddd;
-    margin-bottom: 1.5vh;
 }
 
 .card h3 {
     margin: 10px;
     text-align: center;
-    font-size: 2.5vh;
+    font-size: 3vh;
     color: #333;
 }
 
 .card p {
-    font-size: 2vh;
-    font-weight: bold;
-    margin: 10px;
-    color: #555;
-    text-align: center;
-    line-height: 1.5;
+    position: relative;
+    color: black;
+    border-radius: 4vw;
+    margin-left: 2vh;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    font-size: 2.5vh;
 }
 
 #obiettivi_container {
